# OllamaRAG

./: .gitignore  README.md  app.py  config.py  knowledge_assistant.py  pyproject.toml  requirements.txt
utils/: __init__.py  ollama_utils.py  pdf_utils.py  rag_utils.py  visualization_utils.py
